--- a/app/app.css
+++ b/app/app.css
@@ -1,25 +1,39 @@
 /* app css stylesheet */
 
 .menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
+  /*list-style: none;*/
+  background-color: darkblue;
+  border: 1px solid black;
+  height: 40px;
+  margin-bottom: 20px;
+  text-decoration: none;
 }
 
 .menu > li {
   display: inline;
+  text-decoration: none;
 }
 
 .menu > li + li:before {
-  content: "|";
+  content: " ";
   padding-right: 0.3em;
+}
+
+.menu > li > a:link {
+  color: black;
+  text-decoration: none;
+}
+
+.menu > li > a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.menu > li > a:hover {
+  color: silver;
+  text-decoration: none;
+}
+
+.menu > li > a:active {
+  text-decoration: none;
 }
